# PathoAI-Platform

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: base.yaml
docs/: API.md  AblationStudies.md  Architecture.md  Benchmarking.md  Bootstrap.md  ClinicalRules.md  ClinicalValidation.md  Coordinate_Transform.md  Dashboard.md  Dataset_Specification.md  DesignSystem.md  DetectionMetrics.md  DetectionPipeline.md  Detection_Architecture.md  ErrorAnalysis.md  ExperimentCenter.md  ExperimentTracking.md  Folder_Structure.md  GeometryEngine.md  Implementation_Bible.md  Navigation.md  Pipeline.md  PublicationTables.md  ROIMapper.md  Reproducibility.md  ScoringArchitecture.md  SegmentationMetrics.md  SpatialFusionArchitecture.md  SpatialPipeline.md  StatisticsEngine.md  UIArchitecture.md  ValidationArchitecture.md  ValidationCenter.md  Viewer.md  YOLO_Backend.md
docs/adr/: ADR-001-exception-hierarchy.md  ADR-002-config-system.md
pathoai/: __init__.py
pathoai/config/: __init__.py  experiment_config.py
pathoai/core/: __init__.py  config.py  constants.py  environment.py  exceptions.py  logger.py  reproducibility.py  types.py
pathoai/dashboard/: __init__.py
pathoai/datasets/: __init__.py  dataset.py  loader.py  manifest.py  split.py  statistics.py  transforms.py
pathoai/detection/: __init__.py  coordinate_transform.py  evaluator.py  exporter.py  factory.py  inference.py  merger.py  metrics.py  model.py  pipeline.py  postprocessing.py  registry.py  summary.py  tiling.py  trainer.py  utils.py  visualization.py
pathoai/experiments/: __init__.py  environment.py  latex.py  leaderboard.py  manifest.py  reproducibility.py  supplementary.py  tables.py  tracker.py
pathoai/fusion/: __init__.py  aggregator.py  coordinate_index.py  exporter.py  factory.py  fusion_engine.py  geometry.py  pipeline.py  point_filter.py  registry.py  roi_mapper.py  spatial_intersection.py  spatial_ops.py  stil_computer.py  summary.py  utils.py  validation.py  visualization.py
pathoai/pipeline/: __init__.py  orchestrator.py
pathoai/report/: __init__.py
pathoai/scoring/: __init__.py  bootstrap.py  categorization.py  clinical_rules.py  confidence.py  explainability.py  exporter.py  factory.py  pipeline.py  registry.py  report.py  scorer.py  statistics.py  (+4 more)
scripts/: setup_environment.py
tests/: __init__.py  conftest.py
(+244 files in other folders)
